Fix horizontal scroll overflow

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    overflow: hidden;
 
     &__graphic {
       margin-top: pxToRem(88px);
